--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
       background-position: center; /* Centra la imagen en el contenedor */
       margin: 0;
       padding: 0;
-    }</style><script defer="defer" src="/js/chunk-vendors.bd30077a.js"></script><script defer="defer" src="/js/app.002a2ccb.js"></script><link href="/css/app.dfc7399e.css" rel="stylesheet"></head><body><div id="app"></div></body></html>
+    }</style><script defer="defer" src="/DadosD-D/js/chunk-vendors.bd30077a.js"></script><script defer="defer" src="/DadosD-D/js/app.c4463c05.js"></script><link href="/DadosD-D/css/app.dfc7399e.css" rel="stylesheet"></head><body><div id="app"></div></body></html>
