--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/dist/style.css">
   <style>
     body {
-      background-image: url('/fondo10.jpg'); /* Ruta relativa a la imagen en la carpeta public */
+      background-image: url('/DadosD-D/fondo10.jpg'); /* Ruta relativa a la imagen en la carpeta public */
       background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
       background-position: center; /* Centra la imagen en el contenedor */
       margin: 0;
