--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Vue App</title><link rel="stylesheet" href="/dist/style.css"><style>body {
-      background-image: url('/fondo10.jpg'); /* Ruta relativa a la imagen en la carpeta public */
+      background-image: url('/DadosD-D/fondo10.jpg'); /* Ruta relativa a la imagen en la carpeta public */
       background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
       background-position: center; /* Centra la imagen en el contenedor */
       margin: 0;
